syntax = "proto3";

package checkout;

import "payment.proto";

option go_package = "/checkout";

service CheckoutService {
  rpc Checkout(CheckoutReq) returns (CheckoutResp) {}
}

message CheckoutReq {
  uint32 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  Address address = 5;
  payment.CreditCardInfo credit_card = 6;
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  string zip_code = 5;
}

message CheckoutResp {
  string order_id = 1;
  string transaction_id = 2;
}